--- a/docs/apache-jackrabbit.tex
+++ b/docs/apache-jackrabbit.tex
@@ -3,9 +3,9 @@
 
 \begin{document}
 	\subsection{JCR en Apache Jackrabbit}
-	De Java Content Repository API (JCR) is een api die gebruikt kan worden om data op te slaan in een boomstructuur. Deze boom bestaat uit twee zaken: nodes en properties, nodes vormen de toppen van onze boom waardoor we kunnen navigeren, de top van onze bomen heet de rootnode. De properties zijn de blaadjes van onze toppen die effectieve data bevatten zoals een stuk tekst of getallen. We kunnen door onze nodes navigeren aan de hand van de methodes die de api beschikbaar stelt, we kunnen nagaan of onze node kinderen heeft en hoe deze heten alsook onze ouder bekijken. De data structuur van onze nodes kunnen we definiëren aan de hand van een type. Dit type kan gebruikt worden om bepaalde velden af te dwingen alsook restricties omtrent de toegestane velden op te leggen. Dit type kan ook indiceren dat alles is toegestaan. 
+	De Java Content Repository API (JCR) is een API die gebruikt kan worden om data op te slaan in een boomstructuur. Deze boom bestaat uit verbonden noden die een parent-child relatie hebben, \"e\"en node heeft geen parent en wordt de rootnode genoemd. Alle andere noden zijn een (onrechtstreeks) kind van deze rootnode. Elke node bestaat uit een lijst van properties die de inhoud, eigenschappen en gedrag ervan bepaald, alsook een referentie naar zijn kinderen en ouder. We kunnen door onze nodes navigeren aan de hand van de methodes die de API beschikbaar stelt, we kunnen nagaan of onze node kinderen heeft en hoe deze heten alsook onze ouder bekijken. De data structuur van onze nodes kunnen we defini\"eren aan de hand van een type. Dit type kan gebruikt worden om bepaalde velden af te dwingen alsook restricties omtrent de toegestane velden op te leggen. Dit type kan ook indiceren dat alles is toegestaan. 
 	\par
-	In functie van een CMS applicatie kunnen we onze boom beschouwen als de data op onze pagina's. Onze rootnode is onze homepage en diens kinderen vormen onze navigatie, wanneer we naar de pagina merken navigeren bewegen we ons vanaf onze rootnode naar diens kind 'merken'. De kinderen van de node 'merken' stellen dan elk een effectief merk voor. Omdat de data ongestructureerd is hoeft niet elk merk dezelfde properties te bevatten, tijdens het generen van de pagina kunnen we zaken tonen, of juist niet, aan de hand van de aanwezigheid van bepaalde properties. Dit is een voorbeeld om aan te tonen hoe je met JCR een website kunt opbouwen.
+	In functie van een CMS applicatie kunnen we onze boom beschouwen als de data op onze pagina's. Onze rootnode is onze homepage en diens kinderen vormen onze navigatie, wanneer we naar de pagina 'merken' navigeren bewegen we ons vanaf onze rootnode naar diens kind 'merken'. De kinderen van de node 'merken' stellen dan elk een effectief merk voor. Omdat de data ongestructureerd is hoeft niet elk merk dezelfde properties te bevatten. Tijdens het generen van de pagina kunnen we zaken tonen, of juist niet, aan de hand van de aanwezigheid van bepaalde properties. Dit is een voorbeeld om aan te tonen hoe je met JCR een website kunt opbouwen.
 	\par
-	Het is belangrijk om te begrijpen dat het niet de bedoeling is om traditionele data op te slagen in JCR, enkel content. Apache Jackrabbit is Apaches implementatie van JCR en is geïntegreerd in Apache Sling.
+	Het is belangrijk om te begrijpen dat het niet de bedoeling is om traditionele data op te slagen in JCR, enkel content. Apache Jackrabbit is Apaches implementatie van JCR en is ge\"integreerd in Apache Sling.
 \end{document}
