--- a/docs/apache-sling.tex
+++ b/docs/apache-sling.tex
@@ -3,9 +3,9 @@
 
 \begin{document}
 	\subsection{Apache Sling}
-	Sling is een framework van Apache dat de gebruiker in staat stelt om REST calls te doen via http. Het ondersteund verscheidene bestand types waaronder json, xml en html. Sling is het framework dat AEM gebruikt om aan de hand van een url van een request de juiste node te vinden en diens data terug te geven in de correcte vorm. Via een extensie mee te geven kunnen we aan Sling duidelijk maken hoe we onze data willen, bv. door .json achteraan een url toe te voegen, weet Sling dat we de data als json terug willen.
+	Sling is een framework van Apache dat de gebruiker in staat stelt om REST calls te doen via HTTP. Het ondersteunt verscheidene bestand types waaronder JSON, XML en HTML. Sling is het framework dat AEM gebruikt om aan de hand van een URL van een request de juiste node te vinden en diens data terug te geven in de correcte vorm. Door een extensie mee te geven kunnen we aan Sling duidelijk maken hoe we onze data willen, bv. door ".json" achteraan een URL toe te voegen, weet Sling dat we de data als JSON terug willen.
 	\par
-	Sling is reeds geintegreerd met zowel Apaches Jackrabbit alsook Felix waardoor het de eigenschappen van beiden heeft. Dit wil niet zeggen dat JCR de enige manier is om met Sling data op te slaan, indien gewenst kan er ook met andere databanken zoals SQL of MongoDB gewerkt worden. 
+	Sling is reeds ge\"integreerd met zowel Apaches Jackrabbit alsook Felix waardoor het de eigenschappen van beiden heeft. Dit wil niet zeggen dat JCR de enige manier is om met Sling data op te slaan, indien gewenst kan er ook met andere databanken zoals SQL of MongoDB gewerkt worden. 
 	\par
-	 Wanneer een Sling bundel geïnstalleerd word, registreert het een ResourceProviderFactory bij de Service laag van onze OSGi container.  
+	 Wanneer een Sling bundel ge\"installeerd wordt, registreert het een ResourceProviderFactory bij de service laag van onze OSGi container.  
 \end{document}
