--- a/docs/crx.tex
+++ b/docs/crx.tex
@@ -8,5 +8,5 @@
 	\par
 	Zoals we reeds gezien hebben is de datastructuur van JCR een boom waarin we kunnen navigeren. Een feature die CRX voorziet is een UI waarmee we kunnen navigeren door onze nodes, de CRXDE. Met deze interface kunnen we onze nodes bekijken zoals we een filesystem zouden gebruiken. We kunnen nodes expanderen en hun kinderen bekijken om ook deze te expanderen en zo dieper in onze boom af te dalen, of we kunnen de properties van de node zelf bekijken. De kracht van deze UI is dat we een gestructureerd overzicht van de nodes zien die onze website vormgeven.
 	\par
-	De package manager is een ander belangrijk onderdeel van de CRX en geeft ons de optie om onze OSGi bundels via een interface te managen. Met deze interface kunnen we bundels aan onze applicatie toevoegen of bestaande bundels verwijderen. Buiten beheren welke bundels geïnstalleerd zijn kunnen we deze ook starten en stoppen vanuit de package manager. Moest er een bundel niet starten, kunnen we deze opzoeken in de package manager en krijgen we de reden hiervoor te zien. Dit versimpelt de manier waarop we onze applicatie beheren en is dus van toegevoegde waarden voor de ontwikkelaars.
+	De package manager is een ander belangrijk onderdeel van de CRX en geeft ons de optie onze packages te beheren. Via deze UI kunnen we packages toevoegen, verwijderen en installeren. Wanneer een package wordt ge\"installeerd, worden diens OSGi bundels opgemerkt en actief in de OSGi container. Het is belangrijk te beseffen dat eenmaal een bundel in de container leeft, de package manager hier geen invloed meer op heeft. Indien, na installatie, een package wordt verwijderd, blijft de corresponderende OSGi bundel actief. Om deze bundel te verwijderen moeten we ons wenden tot de OSGi console.
 \end{document}
