--- a/docs/dispatcher.tex
+++ b/docs/dispatcher.tex
@@ -3,12 +3,15 @@
 
 \begin{document}
 	\subsection{Dispatcher}
-	De dispatcher is AEM's eigen caching laag en kan tevens dienen als loadbalancer. Doordat de publieke requests via de dispatcher gaan voorziet deze een extra beveiligingslaag. Dit komt omdat we AEM kunnen afschermen voor requests van buiten ons netwerk. Om een dispatcher op te zetten installeren we de module op een web server en configureren deze. Deze configuratie bevat, onder anderen, waar onze AEM draait, welke soort bestanden er gecached moeten worden en hoe de cache van deze bestanden vervalt.
+	De dispatcher is AEM's eigen caching laag en dient als publieke gateway voor de gebruikers. Doordat de publieke requests via de dispatcher gaan voorziet deze een extra beveiligingslaag. Dit door het feit dat we AEM kunnen afschermen voor requests van buiten ons netwerk. Om een dispatcher op te zetten installeren we de module op een web server en configureren deze. Deze configuratie bevat, onder anderen, waar onze AEM draait, welke soort bestanden er gecached moeten worden en hoe de cache van deze bestanden vervalt.
 	\par	
 	 Wanneer een dispatcher een request binnen krijgt wordt deze eerst geanalyseerd of deze in aanmerking komt voor onze cache. Buiten onze configuratie zijn er ook enkele standaard regels waarna gekeken wordt om dit te bepalen. Enkel de HTTP methode GET komt in aanmerking voor de cache, indien het request een andere methode bevat kan deze niet gecached worden. Ook wanneer er een request parameter wordt meegegeven kan de request niet gecached worden aangezien zo'n request een variabel antwoord heeft.
 	\par
-	Er zijn twee manieren waarop een cache kan vervallen, de eerste zijnde met de auto-invalidate feature. Wanneer bestanden onder deze groep vallen, zal de dispatcher telkens de versie van zijn cache vergelijken met die van AEM, indien er een mismatch is zal de dispatcher opnieuw de request naar AEM doorsturen. Dit betekent dat wijzigingen gemaakt aan onze pagina's onmiddellijk zullen doorkomen op de live site.
+	Er zijn vier manieren waarop een cache kan vervallen, de eerste zijnde een levensduur aan de caches toekennen. Wanneer een cache deze levensduur overschrijdt vervalt deze, bij een volgend request wordt er een nieuwe call naar de publisher gedaan. Deze nieuwe versie vervangt vervolgens de oude cache en wordt naar de gebruiker doorgestuurd.
 	\par
-	Wanneer bovenstaande methode niet gewenst is, misschien willen we meer controle over het tijdstip dat pagina's geregenereerd worden, kunnen we de auto-invalidate functie uit laten. Als we nu onze cache willen invalideren zullen we hiervoor een call moeten doen naar de dispatcher. Wanneer deze binnenkomt vervalt de cache onmiddellijk en eerst volgend request krijgt de nieuwe content te zien.
+	Een andere mogelijkheid is om de cache van een pagina te verwijderen wanneer een nieuwe versie beschikbaar wordt. Hiervoor moet de author een flush request doen naar de dispatcher toe op het moment dat een pagina wordt gepublished. Dit request verwijdert de cache, de volgende keer dat de pagina wordt opgevraagd is de dispatcher verplicht om deze opnieuw op te halen.
 	\par
+	 Een andere manier om bij het publiceren een cache te invalideren is met het gebruik van stat bestanden. Een stat bestand is een record dat (onder andere) de laatste datum van modificatie onthoudt. Wanneer een pagina wordt gepubliceerd, plaats de author een stat bestand voor deze pagina op de dispatcher. Het tijdstip van modificatie van het stat bestand zal telkens vergeleken worden met die van de gecachte pagina. Indien die van de pagina ouder is, weet de dispatcher dat er een nieuwe versie beschikbaar is. Vervolgens verwijdert de dispatcher de cache en haalt de nieuwe versie op.
+	 \par
+	 Een laatste techniek is het expliciet verwijderen van de bestanden op de dispatcher. Deze zal niet meer in staat zijn de pagina terug te vinden en wordt verplicht om deze opnieuw op te halen. Dit kan manueel gebeuren door in te loggen op de machine of via een script dat periodiek wordt uitgevoerd.
 \end{document}
