--- a/docs/scheduler.tex
+++ b/docs/scheduler.tex
@@ -9,9 +9,9 @@
 	\begin{lstlisting}
 		$ java -jar Obsidian-Install-n-n-n.jar -console
 	\end{lstlisting}
-	Het '-console' zorgt ervoor dat we onze installatie zonder een UI kunnen configureren, hier vullen we onderhanden in in welke folder Obsidian terecht komt en de database gegevens. Eenmaal compleet hebben we een war in onze opgegeven folder gekregen, deze deployen we in onze Tomcat. Als we de default gegevens hebben laten staan kunnen we nu op poort 8080 van onze machine aan de UI van onze obsidian. We kunnen inloggen met de gebruiker admin en paswoord changeme.
+	Het '-console' zorgt ervoor dat we onze installatie zonder een UI kunnen configureren, hier vullen we onder andere in welke folder Obsidian terecht komt en de database gegevens. Eenmaal compleet hebben we een war in onze opgegeven folder gekregen, deze deployen we in onze Tomcat. Als we de default gegevens hebben laten staan kunnen we nu op poort 8080 van onze machine aan de UI van onze obsidian. We kunnen inloggen met de gebruiker admin en paswoord changeme.
 	\par
-	Onze installatie is voorzien van enkele standaard jobs maar het is mogelijk om via de Java api zelf jobs te coderen. De api voorziet de interface InterruptableJob die een klasse dwingt om de execute methode te implementeren, deze heeft een JobContext als parameter. Obsidian scant de lib folder van Tomcat en pikt de klassen die deze interface implementeren op als jobs. Om vanuit de UI parameters te kunnen meegeven moeten we onze klasse ook voorzien met de Configuration annotatie waarin we array van @Parameter aan meegeven. Elke parameter geven we een naam, een type, of deze vereist is en een eventuele default waarde. Tijdens het runnen van onze job kan je de parameterwaarde uit de JobContext halen.
+	Onze installatie is voorzien van enkele standaard jobs maar het is mogelijk om via de Java API zelf jobs te coderen. De API voorziet de interface InterruptableJob die een klasse dwingt om de execute methode te implementeren, deze heeft een JobContext als parameter. Obsidian scant de lib folder van Tomcat en pikt de klassen die deze interface implementeren op als jobs. Om vanuit de UI parameters te kunnen meegeven moeten we onze klasse voorzien met de Configuration annotatie, hierin defini\"eren we een array van @Parameter annotaties. Elke parameter geven we een naam, een type, of deze vereist is en een eventuele default waarde. Tijdens het runnen van onze job kan je de parameterwaarde uit de JobContext halen.
 	\par
-	Voor dit project maken we twee jobs aan, \'e\'en die alle categorie\"en ophaalt en doorstuurt naar AEM en eentje die enkel de gewijzigde categorie\"en ophaalt. Beide jobs hebben twee stappen waarvan de eerste het ophalen van de categorie\"en is. De eerste job doet dit zonder parameter en krijgt alles binnen, de tweede doet dit met een datum en krijgt enkele die gewijzigd zijn na deze datum binnen. De volgende stap is identiek voor de jobs, itereren over de opgehaalde categorieën en deze \'e\'en voor \'e\'en doorsturen naar AEM, dit zal het pagina generatie proces starten.
+	Voor dit project maken we twee jobs aan, \'e\'en die alle categorie\"en ophaalt en doorstuurt naar AEM en eentje die enkel de gewijzigde ophaalt. Beide jobs hebben twee stappen waarvan de eerste het ophalen van de categorie\"en is. De eerste job doet dit zonder parameter en krijgt alles binnen, de jog voor de gewijzigde doet dit met een datum en krijgt enkele die gemodificeerd zijn na deze datum binnen. De volgende stap is identiek voor de jobs, itereren over de opgehaalde categorieën en deze \'e\'en voor \'e\'en doorsturen naar AEM, dit zal het pagina generatie proces starten.
 \end{document}
