--- a/docs/subsec-aem.tex
+++ b/docs/subsec-aem.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 	\subsubsection{Editor}
-	Alles wat we tot hiertoe gezien hebben heeft als functie het voorzien van componenten die bepaalde functionaliteit bezitten. Eenmaal we de componenten ontwikkeld hebben en via onze bundels geïnstalleerd zijn, is het tijd voor de designers aan de slag te gaan. De belangrijkste feature van AEM is de mogelijkheid om content te voorzien, gebruik makend van onze componenten. We kunnen deze slepen op templates, configureren en voorzien van inhoud. Een designer kan zo een volledige pagina, inclusief de navigatie hiernaar toe, opbouwen zonder een enkele html tag of javascript regel te schrijven. Wanneer een pagina af is, kan men deze ook publiceren via AEM zodat het resultaat door de wereld gezien kan worden.
+	Alles wat we tot hiertoe gezien hebben heeft als functie het voorzien van componenten die bepaalde functionaliteit bezitten. Eenmaal we de componenten ontwikkeld hebben en via onze bundels ge\"installeerd zijn, is het tijd voor de designers aan de slag te gaan. De belangrijkste feature van AEM is de mogelijkheid om content te voorzien, gebruik makend van onze componenten. We kunnen deze slepen op templates, configureren en voorzien van inhoud. Een designer kan zo een volledige pagina, inclusief de navigatie hiernaar toe, opbouwen zonder een enkele HTML tag of Javascript regel te schrijven. Wanneer een pagina af is, kan men deze ook publiceren via AEM zodat het resultaat door de wereld gezien kan worden.
 	\subsubsection{DAM}
 	De DAM (Digital Asset Manager) is een opslag plaats waar we onze verschillende media kwijt kunnen zoals foto's of video's. Eenmaal opgeslagen in de DAM kunnen we deze gebruiken op onze website door middel van referentie, later zien we hoe dit praktisch in zijn werk gaat.
 \end{document}
